# echo_nomical

./: Cargo.toml  README.md  echo_nomical-30a17b5767b41616.js  echo_nomical-3e07f5c9997fc476.js  echo_nomical-4fd0f5548ef33675.js  echo_nomical-990fa8f65c207d8a.js  echo_nomical-cdc1a888cd6483.js  index.html  sonarscape-a49bee4dc6adb42d.js  todo.md
.github/workflows/: ci.yml  deploy-page.yaml  release.yaml
credits/: CREDITS.md
itch/: cover.xcf
src/: lib.rs  main.rs
src/agent/: agent.rs  mod.rs
src/animation/: mod.rs  tween.rs  tween_events.rs  tween_lenses.rs  tween_macros.rs
src/assets/: audio.rs  fonts.rs  mod.rs  splash.rs  textures.rs  window_icon.rs
src/audio/: mod.rs  sfx.rs
src/debug/: mod.rs
src/echolocation/: echolocation.rs  mod.rs  wave.rs
src/enemy/: mod.rs
src/input/: actions.rs  cooldown.rs  mod.rs  mouse.rs
src/io/: mod.rs  save.rs
src/level/: level.rs  map.rs  mapgen.rs  mod.rs
src/physics/: mod.rs
src/player/: mod.rs  player.rs
src/render/: camera.rs  mod.rs  palette.rs
src/state/: mod.rs  pause.rs  reset.rs  state.rs
src/time/: mod.rs  time.rs
src/tools/: ecs.rs  enum_tools.rs  math.rs  mod.rs
src/ui/: button.rs  game_over.rs  menu.rs  mod.rs  pause.rs  splash.rs  tutorial.rs
